Add IntelliJ-friendly Maven setup